--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Simple React App using Routing showing the weather in various cities",
   "main": "bundle.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "author": "Ashley Bennett",
   "license": "MIT",
